Lexical_and_Syntax_Analysis/gen/main/grammar/FunctionCraftParser.java
// Generated from C:/Users/pars system/Downloads/FunctionCraft/src/main/grammar/FunctionCraft.g4 by ANTLR 4.13.1
package main.grammar;
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast", "CheckReturnValue"})
public class FunctionCraftParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.13.1", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		DEF=1, END=2, MAIN=3, RETURN=4, IF=5, ELSE=6, ELSEIF=7, TRUE=8, FALSE=9, 
		CHOP=10, CHOMP=11, PUSH=12, PUTS=13, METHOD=14, LEN=15, PATTERN=16, MATCH=17, 
		NEXT=18, BREAK=19, LOOP=20, DO=21, FOR=22, IN=23, COLON=24, SEMICOLON=25, 
		QUOTE=26, O_PAR=27, C_PAR=28, O_CUR=29, C_CUR=30, O_BRK=31, C_BRK=32, 
		LAMBDA=33, COMMA=34, DOT=35, DEC=36, INC=37, GTE=38, LT=39, LTE=40, AND=41, 
		EQ=42, EQ_NEG=43, OR=44, INDENT=45, INDENT2=46, APPEND=47, EQU_SUM=48, 
		EQU_SUB=49, EQU_MUL=50, EQU_DIV=51, EQU_REMAIN=52, EQU=53, SUM=54, SUB=55, 
		MUL=56, DIV=57, REMAIN=58, GT=59, NOT=60, IDENTIFIER=61, INT_VAL=62, FLOAT_VAL=63, 
		STRING_VAL=64, COMMENT=65, MULTI_COMMENT=66, WS=67;
	public static final int
		RULE_program = 0, RULE_function = 1, RULE_main = 2, RULE_lambda_function = 3, 
		RULE_body_function = 4, RULE_params = 5, RULE_dflt_params = 6, RULE_method = 7, 
		RULE_call_function = 8, RULE_call_params = 9, RULE_return_statement = 10, 
		RULE_bool_val = 11, RULE_list_val = 12, RULE_valList = 13, RULE_nestedList = 14, 
		RULE_index = 15, RULE_built_in = 16, RULE_equ = 17, RULE_assign = 18, 
		RULE_puts = 19, RULE_push = 20, RULE_len = 21, RULE_chop = 22, RULE_chomp = 23, 
		RULE_condition_statement = 24, RULE_condition_expression = 25, RULE_break_next = 26, 
		RULE_loop_statement = 27, RULE_types = 28, RULE_pattern = 29, RULE_options = 30, 
		RULE_pattern_call = 31, RULE_statement = 32, RULE_expression = 33, RULE_shift = 34, 
		RULE_logical_or = 35, RULE_logical_and = 36, RULE_equality = 37, RULE_relational = 38, 
		RULE_additive = 39, RULE_multiplicative = 40, RULE_unary = 41, RULE_primary = 42, 
		RULE_primary2 = 43, RULE_indexed = 44, RULE_factor = 45, RULE_c_expr = 46, 
		RULE_c_assignment = 47, RULE_c_shift = 48, RULE_c_equality = 49, RULE_c_relational = 50, 
		RULE_c_additive = 51, RULE_c_multiplicative = 52, RULE_c_unary = 53, RULE_c_primary = 54, 
		RULE_c_primary2 = 55, RULE_c_indexed = 56, RULE_c_factor = 57;
	private static String[] makeRuleNames() {
		return new String[] {
			"program", "function", "main", "lambda_function", "body_function", "params", 
			"dflt_params", "method", "call_function", "call_params", "return_statement", 
			"bool_val", "list_val", "valList", "nestedList", "index", "built_in", 
			"equ", "assign", "puts", "push", "len", "chop", "chomp", "condition_statement", 
			"condition_expression", "break_next", "loop_statement", "types", "pattern", 
			"options", "pattern_call", "statement", "expression", "shift", "logical_or", 
			"logical_and", "equality", "relational", "additive", "multiplicative", 
			"unary", "primary", "primary2", "indexed", "factor", "c_expr", "c_assignment", 
			"c_shift", "c_equality", "c_relational", "c_additive", "c_multiplicative", 
			"c_unary", "c_primary", "c_primary2", "c_indexed", "c_factor"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, "'def'", "'end'", "'main'", "'return'", "'if'", "'else'", "'elseif'", 
			"'true'", "'false'", "'chop'", "'chomp'", "'push'", "'puts'", "'method'", 
			"'len'", "'pattern'", "'match'", "'next'", "'break'", "'loop'", "'do'", 
			"'for'", "'in'", "':'", "';'", "'\"'", "'('", "')'", "'{'", "'}'", "'['", 
			"']'", "'->'", "','", "'.'", "'--'", "'++'", "'>='", "'<'", "'<='", "'&&'", 
			"'=='", "'!='", "'||'", "'\\n    |'", "'\\n\\t|'", "'<<'", "'+='", "'-='", 
			"'*='", "'/='", "'%='", "'='", "'+'", "'-'", "'*'", "'/'", "'%'", "'>'", 
			"'!'"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "DEF", "END", "MAIN", "RETURN", "IF", "ELSE", "ELSEIF", "TRUE", 
			"FALSE", "CHOP", "CHOMP", "PUSH", "PUTS", "METHOD", "LEN", "PATTERN", 
			"MATCH", "NEXT", "BREAK", "LOOP", "DO", "FOR", "IN", "COLON", "SEMICOLON", 
			"QUOTE", "O_PAR", "C_PAR", "O_CUR", "C_CUR", "O_BRK", "C_BRK", "LAMBDA", 
			"COMMA", "DOT", "DEC", "INC", "GTE", "LT", "LTE", "AND", "EQ", "EQ_NEG", 
			"OR", "INDENT", "INDENT2", "APPEND", "EQU_SUM", "EQU_SUB", "EQU_MUL", 
			"EQU_DIV", "EQU_REMAIN", "EQU", "SUM", "SUB", "MUL", "DIV", "REMAIN", 
			"GT", "NOT", "IDENTIFIER", "INT_VAL", "FLOAT_VAL", "STRING_VAL", "COMMENT", 
			"MULTI_COMMENT", "WS"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "FunctionCraft.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	public FunctionCraftParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ProgramContext extends ParserRuleContext {
		public MainContext main() {
			return getRuleContext(MainContext.class,0);
		}
		public List<TerminalNode> COMMENT() { return getTokens(FunctionCraftParser.COMMENT); }
		public TerminalNode COMMENT(int i) {
			return getToken(FunctionCraftParser.COMMENT, i);
		}
		public List<TerminalNode> MULTI_COMMENT() { return getTokens(FunctionCraftParser.MULTI_COMMENT); }
		public TerminalNode MULTI_COMMENT(int i) {
			return getToken(FunctionCraftParser.MULTI_COMMENT, i);
		}
		public List<FunctionContext> function() {
			return getRuleContexts(FunctionContext.class);
		}
		public FunctionContext function(int i) {
			return getRuleContext(FunctionContext.class,i);
		}
		public List<PatternContext> pattern() {
			return getRuleContexts(PatternContext.class);
		}
		public PatternContext pattern(int i) {
			return getRuleContext(PatternContext.class,i);
		}
		public ProgramContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_program; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterProgram(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitProgram(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitProgram(this);
			else return visitor.visitChildren(this);
		}
	}

	public final ProgramContext program() throws RecognitionException {
		ProgramContext _localctx = new ProgramContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_program);
		int _la;
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(122);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					{
					setState(120);
					_errHandler.sync(this);
					switch (_input.LA(1)) {
					case COMMENT:
						{
						setState(116);
						match(COMMENT);
						}
						break;
					case MULTI_COMMENT:
						{
						setState(117);
						match(MULTI_COMMENT);
						}
						break;
					case DEF:
						{
						setState(118);
						function();
						}
						break;
					case PATTERN:
						{
						setState(119);
						pattern();
						}
						break;
					default:
						throw new NoViableAltException(this);
					}
					} 
				}
				setState(124);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,1,_ctx);
			}
			setState(125);
			main();
			setState(129);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==COMMENT || _la==MULTI_COMMENT) {
				{
				{
				setState(126);
				_la = _input.LA(1);
				if ( !(_la==COMMENT || _la==MULTI_COMMENT) ) {
				_errHandler.recoverInline(this);
				}
				else {
					if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
					_errHandler.reportMatch(this);
					consume();
				}
				}
				}
				setState(131);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class FunctionContext extends ParserRuleContext {
		public Token name;
		public TerminalNode DEF() { return getToken(FunctionCraftParser.DEF, 0); }
		public TerminalNode O_PAR() { return getToken(FunctionCraftParser.O_PAR, 0); }
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public TerminalNode C_PAR() { return getToken(FunctionCraftParser.C_PAR, 0); }
		public Body_functionContext body_function() {
			return getRuleContext(Body_functionContext.class,0);
		}
		public TerminalNode END() { return getToken(FunctionCraftParser.END, 0); }
		public TerminalNode IDENTIFIER() { return getToken(FunctionCraftParser.IDENTIFIER, 0); }
		public FunctionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterFunction(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitFunction(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitFunction(this);
			else return visitor.visitChildren(this);
		}
	}

	public final FunctionContext function() throws RecognitionException {
		FunctionContext _localctx = new FunctionContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(132);
			match(DEF);
			setState(133);
			((FunctionContext)_localctx).name = match(IDENTIFIER);
			System.out.println("FuncDec: " + (((FunctionContext)_localctx).name!=null?((FunctionContext)_localctx).name.getText():null));
			setState(135);
			match(O_PAR);
			setState(136);
			params();
			setState(137);
			match(C_PAR);
			setState(138);
			body_function();
			setState(139);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class MainContext extends ParserRuleContext {
		public TerminalNode DEF() { return getToken(FunctionCraftParser.DEF, 0); }
		public TerminalNode MAIN() { return getToken(FunctionCraftParser.MAIN, 0); }
		public TerminalNode O_PAR() { return getToken(FunctionCraftParser.O_PAR, 0); }
		public TerminalNode C_PAR() { return getToken(FunctionCraftParser.C_PAR, 0); }
		public Body_functionContext body_function() {
			return getRuleContext(Body_functionContext.class,0);
		}
		public TerminalNode END() { return getToken(FunctionCraftParser.END, 0); }
		public MainContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_main; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterMain(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitMain(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitMain(this);
			else return visitor.visitChildren(this);
		}
	}

	public final MainContext main() throws RecognitionException {
		MainContext _localctx = new MainContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_main);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(141);
			match(DEF);
			setState(142);
			match(MAIN);
			System.out.println("MAIN"); 
			setState(144);
			match(O_PAR);
			setState(145);
			match(C_PAR);
			setState(146);
			body_function();
			setState(147);
			match(END);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Lambda_functionContext extends ParserRuleContext {
		public TerminalNode LAMBDA() { return getToken(FunctionCraftParser.LAMBDA, 0); }
		public List<TerminalNode> O_PAR() { return getTokens(FunctionCraftParser.O_PAR); }
		public TerminalNode O_PAR(int i) {
			return getToken(FunctionCraftParser.O_PAR, i);
		}
		public ParamsContext params() {
			return getRuleContext(ParamsContext.class,0);
		}
		public List<TerminalNode> C_PAR() { return getTokens(FunctionCraftParser.C_PAR); }
		public TerminalNode C_PAR(int i) {
			return getToken(FunctionCraftParser.C_PAR, i);
		}
		public TerminalNode O_CUR() { return getToken(FunctionCraftParser.O_CUR, 0); }
		public TerminalNode SEMICOLON() { return getToken(FunctionCraftParser.SEMICOLON, 0); }
		public TerminalNode C_CUR() { return getToken(FunctionCraftParser.C_CUR, 0); }
		public Call_paramsContext call_params() {
			return getRuleContext(Call_paramsContext.class,0);
		}
		public TerminalNode RETURN() { return getToken(FunctionCraftParser.RETURN, 0); }
		public ExpressionContext expression() {
			return getRuleContext(ExpressionContext.class,0);
		}
		public Lambda_functionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_lambda_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterLambda_function(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitLambda_function(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitLambda_function(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Lambda_functionContext lambda_function() throws RecognitionException {
		Lambda_functionContext _localctx = new Lambda_functionContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_lambda_function);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(149);
			match(LAMBDA);
			System.out.println("Structure: LAMBDA");
			setState(151);
			match(O_PAR);
			setState(152);
			params();
			setState(153);
			match(C_PAR);
			setState(154);
			match(O_CUR);
			setState(165);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case RETURN:
				{
				{
				setState(155);
				match(RETURN);
				System.out.println("RETURN");
				setState(162);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,3,_ctx) ) {
				case 1:
					{
					{
					setState(157);
					match(O_PAR);
					setState(158);
					expression();
					setState(159);
					match(C_PAR);
					}
					}
					break;
				case 2:
					{
					{
					setState(161);
					expression();
					}
					}
					break;
				}
				}
				}
				break;
			case TRUE:
			case FALSE:
			case CHOP:
			case CHOMP:
			case PUSH:
			case PUTS:
			case LEN:
			case O_PAR:
			case O_BRK:
			case LAMBDA:
			case SUB:
			case NOT:
			case IDENTIFIER:
			case INT_VAL:
			case FLOAT_VAL:
			case STRING_VAL:
				{
				{
				setState(164);
				expression();
				}
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			setState(167);
			match(SEMICOLON);
			setState(168);
			match(C_CUR);
			setState(173);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,5,_ctx) ) {
			case 1:
				{
				setState(169);
				match(O_PAR);
				setState(170);
				call_params();
				setState(171);
				match(C_PAR);
				}
				break;
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class Body_functionContext extends ParserRuleContext {
		public List<StatementContext> statement() {
			return getRuleContexts(StatementContext.class);
		}
		public StatementContext statement(int i) {
			return getRuleContext(StatementContext.class,i);
		}
		public Return_statementContext return_statement() {
			return getRuleContext(Return_statementContext.class,0);
		}
		public Body_functionContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_body_function; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterBody_function(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitBody_function(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitBody_function(this);
			else return visitor.visitChildren(this);
		}
	}

	public final Body_functionContext body_function() throws RecognitionException {
		Body_functionContext _localctx = new Body_functionContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_body_function);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(178);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (((((_la - 5)) & ~0x3f) == 0 && ((1L << (_la - 5)) & 1118018607834629625L) != 0)) {
				{
				{
				setState(175);
				statement();
				}
				}
				setState(180);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(182);
			_errHandler.sync(this);
			_la = _input.LA(1);
			if (_la==RETURN) {
				{
				setState(181);
				return_statement();
				}
			}

			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	@SuppressWarnings("CheckReturnValue")
	public static class ParamsContext extends ParserRuleContext {
		public List<TerminalNode> IDENTIFIER() { return getTokens(FunctionCraftParser.IDENTIFIER); }
		public TerminalNode IDENTIFIER(int i) {
			return getToken(FunctionCraftParser.IDENTIFIER, i);
		}
		public List<TerminalNode> COMMA() { return getTokens(FunctionCraftParser.COMMA); }
		public TerminalNode COMMA(int i) {
			return getToken(FunctionCraftParser.COMMA, i);
		}
		public TerminalNode O_BRK() { return getToken(FunctionCraftParser.O_BRK, 0); }
		public Dflt_paramsContext dflt_params() {
			return getRuleContext(Dflt_paramsContext.class,0);
		}
		public TerminalNode C_BRK() { return getToken(FunctionCraftParser.C_BRK, 0); }
		public ParamsContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_params; }
		@Override
		public void enterRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).enterParams(this);
		}
		@Override
		public void exitRule(ParseTreeListener listener) {
			if ( listener instanceof FunctionCraftListener ) ((FunctionCraftListener)listener).exitParams(this);
		}
		@Override
		public <T> T accept(ParseTreeVisitor<? extends T> visitor) {
			if ( visitor instanceof FunctionCraftVisitor ) return ((FunctionCraftVisitor<? extends T>)visitor).visitParams(this);
			else return visitor.visitChildren(this);
		}
	}
